--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,19 @@
         @apply cursor-pointer;
     }
 }
+
+/* footer.css */
+footer {
+    position: fixed; 
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+    padding: 5px; 
+    text-align: center; 
+    z-index: 1000; 
+}
+
+footer a {
+    font-size: 35px;
+    color: white;
+}
