--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ footer a {
 /* Projects.css */
 .project-card {
     width: 300px; 
-    margin: 20px;
+    margin-bottom: 100px;
+    padding: 6px;
     background-color: #333; 
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -82,7 +83,8 @@ footer a {
     align-items: flex-start; 
     padding-top: 20px; 
     margin-top: 300px;
-  
+    gap: 20px;
+    padding-bottom: 500px;
   }
   
   
