--- a/src/index.css
+++ b/src/index.css
@@ -33,13 +33,16 @@ footer a {
 }
 
 /* Projects.css */
+
 .project-card {
     width: 300px; 
+    height: 350px;
     margin-bottom: 100px;
     padding: 6px;
     background-color: #333; 
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+   
   }
 
   .project-card:hover {
@@ -49,10 +52,12 @@ footer a {
   .project-image {
     width: 100%;
     border-radius: 8px;
+    border-radius: 8px 8px 0 0;
   }
 
   .project-info {
     margin-top: 10px;
+    flex-grow: 1;
   }
 
   .project-info h2 {
@@ -85,8 +90,19 @@ footer a {
     margin-top: 300px;
     gap: 20px;
     padding-bottom: 500px;
+    height: 100%; 
   }
   
+  .project-name {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px; 
+    color: white;
+    border-radius: 0 0 8px 8px;
+}
+
+
+
   
  
 
